<resources>
    <string name="app_name">QuizGenerator</string>
    <string name="steps">Steps To Generate Quiz</string>
    <string name="step1">1. Click the Generate Button
    below to get started !! </string>
    <string name="step2">2. Then you will be asked to
    click the photo of the
    questions with its options.</string>
    <string name="step3">3. Crop the image.</string>
    <string name="step4">4. Adjust the error and options
    to your match.</string>
    <string name="step5">5. Select the add button to add
    it to the list of questions in your
    quiz.</string>
    <string name="step6">6. Screen displaying the list of
    questions will appear. If you
    wish to add a question click add
    else exit.</string>
    <string name="step7">7. After exiting, If you wish to add
   a timer set the timer.</string>
    <string name="step8">8. Click Generate.</string>
    <string name="name">Name Your Quiz</string>
    <string name="enter_name">Enter Quiz Name</string>
    <string name="next">NEXT</string>
    <string name="pre_question">Preview Question</string>
    <string name="list">List Of Question</string>
    <string name="add_question">Add Question</string>
    <string name="finish">Finish</string>
    <string name="host">Host and Modify Your Quizzes</string>
    <string name="create">Create Your Quizzes</string>
    <string name="dashboard">DashBoard</string>
    <string name="generateQues">Generate Question</string>
    <string name="generateQuiz">Generate Quiz</string>
    <string name="listofquiz">List Of Quizzes</string>
    <string name="logout">Logout</string>
    <string name="noQuizYet">No Quiz Created Yet !!.</string>
    <string name="newQuiz">Create a New Quiz</string>
    <string name="previous">previous</string>
    <string name="timer">00:00</string>
    <string name="editQuestion">Edit Question</string>
    <string name="addOption">Add Option</string>
    <string name="question">Enter the Question Here.</string>
    <string name="home">Home</string>
    <string name="signUp">Sign Up</string>
    <string name="enterEmail">Enter you Email Id</string>
    <string name="enterpassword">Enter your Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_to_app">New to the App. Sign Up to proceed.</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password_footer">In case you forget your password. Reset Password mail will be sent to the mentioned Email Id.</string>
    <string name="title_activity_tab_activity">Tab_activity</string>
    <string name="tab_text_1">Created</string>
    <string name="tab_text_2">Results</string>
    <string name="tab_heading">QUIZZES</string>
    <string name="tab_1">Created</string>
    <string name="tab_2">Results</string>
</resources>

