<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Question">

    <TextView
        android:text="@string/editQuestion"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5608DF"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:background="#F8C427"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:text="@string/addOption"
        android:onClick="addEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/question_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/question"
                android:hint="@string/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_slab"
                android:inputType="textMultiLine"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#F8C427"
        android:fontFamily="sans-serif"
        android:onClick="previewQuestion"
        android:text="@string/pre_question" />
</LinearLayout>