<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListOfQuizs">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5608DF">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="#5608DF"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="50dp"
            android:paddingTop="8dp"
            android:text="@string/listofquiz"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#F8C427"
            android:onClick="logout"
            android:text="@string/logout"
            android:textSize="15sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/noQuiz"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/noQuizYet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/listOfquizs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8C427"
        android:paddingStart="8dp"
        android:text="@string/newQuiz"
        android:textStyle="bold" />
</LinearLayout>