<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5608DF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="10dp"
            android:paddingStart="70dp"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="#F8C427"
            android:onClick="logout"
            android:text="@string/logout"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/host_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/attend_quiz_foreground"
            android:contentDescription="@string/host" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:background="#AA000000"
            android:padding="12dip"
            android:text="Host And Modify Quizzes"
            android:textColor="#ffffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/create_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/create_quiz_foreground"
            android:contentDescription="@string/create"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"

            android:background="#AA000000"
            android:padding="12dip"
            android:text="Create Quiz"
            android:textColor="#ffffffff" />
    </RelativeLayout>
</LinearLayout>